apps/casego/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: casego
  namespace: casego-apps
  labels:
    app: casego
spec:
  selector:
    matchLabels:
      app: casego
  template:
    metadata:
      labels:
        app: casego
    spec:
      containers:
        - name: casego
          image: ghcr.io/sewaustav/casego-casego:main-fcab8d2e2584d9ae9a9a568206571e330ef6d48b # {"$imagepolicy": "flux-system:casego-casego"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
          volumeMounts:
            - name: payment-tls
              mountPath: /app/ca.crt
              subPath: ca.crt
              readOnly: true
            - name: payment-tls
              mountPath: /app/general-client.crt
              subPath: general-client.crt
              readOnly: true
            - name: payment-tls
              mountPath: /app/general-client.key
              subPath: general-client.key
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 384Mi
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
        - name: payment-tls
          secret:
            secretName: payment-client-tls
