apps/casego/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: casego
  namespace: casego-apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - casego.158-160-192-124.nip.io
      secretName: casego-tls
  rules:
    - host: casego.158-160-192-124.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: casego
                port:
                  number: 8081
